--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^1.3.0",
-    "next": "14.0.3",
+    "@rainbow-me/rainbowkit": "^1.3.1",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "^1.19.11",
-    "wagmi": "^1.4.8"
+    "viem": "^1.20.0",
+    "wagmi": "^1.4.12"
   },
   "devDependencies": {
     "eslint": "^8",
